Added new nodes and removed unused ones in Blender 4.1

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_1.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_1.jsonc
@@ -49,6 +49,11 @@
             "before_node": "GeometryNodeCollectionInfo"
           }
         ]
+      },
+      "ROTATION": {
+        "nodes": [
+          { "identifier": "FunctionNodeRotateRotation" , "before_node": "FunctionNodeRotateVector"}
+        ]
       }
     }
   }
