Updated with new nodes in 4.2

--- a/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree.jsonc
@@ -482,7 +482,7 @@
         { "identifier": "ShaderNodeMix" },
         { "identifier": "FunctionNodeRandomValue" },
         { "identifier": "GeometryNodeSwitch" },
-        { "separator": true, "label": "Rotation" },
+        { "separator": true, "label": "Rotation", "identifier": "SepRotation" },
         { "identifier": "FunctionNodeAlignEulerToVector" },
         { "identifier": "FunctionNodeRotateEuler" }
       ]
