--- a/node_pie/node_def_files/sockets/GeometryNodeTree_sockets.jsonc
+++ b/node_pie/node_def_files/sockets/GeometryNodeTree_sockets.jsonc
@@ -1,3 +1,6 @@
+// This is a list of the socket types of all nodes
+// used for telling whether a node is valid during link drag.
+// It can be auto generated using the 'generate socket types file' operator
 {
   "GeometryNodeBlurAttribute": {
     "inputs": [
