--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -5,7 +5,7 @@ schema_version = "1.0.0"
 id = "NodePie"
 version = "1.2.33"
 name = "Node Pie"
-tagline = "Add nodes visually with a pie menu"
+tagline = "Add nodes faster with a pie menu"
 maintainer = "Andrew Stevenson"
 # Supported types: "add-on", "theme"
 type = "add-on"
