started updating def files

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_1.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_1.jsonc
@@ -38,7 +38,7 @@
         "nodes": [
           {
             "identifier": "GeometryNodeIndexSwitch",
-            "before_node": "GeometryNodeSwitch"
+            "after_node": "FunctionNodeFloatToInt"
           }
         ]
       },
