--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_2.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_2.jsonc
@@ -46,6 +46,11 @@
           { "identifier": "FunctionNodeTransformPoint" },
           { "identifier": "FunctionNodeTransposeMatrix" }
         ]
+      },
+      "UTILITIES": {
+        "nodes": [
+          { "identifier": "GeometryNodeMenuSwitch", "after_node": "ShaderNodeMath"}
+        ]
       }
     }
   }
