--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_2.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_2.jsonc
@@ -7,16 +7,16 @@
       "left": [[], [], ["UTILITIES", "INSTANCE", "POINT"]],
       "right": [
         ["INPUT", "COLOR", "ROTATION"],
-        ["UV", "VOLUME"]
+        ["UV"]
       ],
       "top": [["ATTRIBUTE"]]
     },
-    "nodes": ["FunctionNodeAlignEulerToVector", "SepRotation"]
+    "nodes": ["FunctionNodeAlignEulerToVector", "SepRotation", "GeometryNodeIndexSwitch", "GeometryNodeSwitch"]
   },
   "additions": {
     "layout": {
       "left": [[], [], ["MATRIX", "UTILITIES", "ROTATION"]],
-      "right": [["INSTANCE", "INPUT", "VOLUME"], ["POINT"]],
+      "right": [["INSTANCE", "INPUT"], ["POINT"]],
       "top": [["COLOR", "ATTRIBUTE"]],
       "bottom": [["UV"]]
     },
@@ -49,11 +49,25 @@
         "nodes": [
           {
             "identifier": "GeometryNodeToolMousePosition",
-            "before_node": "GeometryNodeObjectInfo"
+            "after_node": "GeometryNodeToolFaceSet",
+            "poll_conditions": [
+              {
+                "context_path": "space_data.geometry_nodes_type",
+                "operand": "equals",
+                "value": "TOOL"
+              }
+            ]
           },
           {
             "identifier": "GeometryNodeViewportTransform",
-            "after_node": "GeometryNodeInputSceneTime"
+            "after_node": "bottom",
+            "poll_conditions": [
+              {
+                "context_path": "space_data.geometry_nodes_type",
+                "operand": "equals",
+                "value": "TOOL"
+              }
+            ]
           },
           {
             "identifier": "FunctionNodeInputRotation",
@@ -88,10 +102,12 @@
       },
       "UTILITIES": {
         "nodes": [
+          {"separator": true, "label": "Switch", "after_node":"bottom"},
+          {"identifier": "GeometryNodeIndexSwitch"},
           {
-            "identifier": "GeometryNodeMenuSwitch",
-            "after_node": "ShaderNodeMath"
-          }
+            "identifier": "GeometryNodeMenuSwitch"
+          },
+          {"identifier": "GeometryNodeSwitch"}
         ]
       },
       "INSTANCE": {
