--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
@@ -5,7 +5,7 @@
   "blender_version": [4, 0, 0],
   "removals": {
     "layout": {
-      "right": [[], [], ["SIMULATION"]]
+      "right": [[], ["VOLUME"], ["SIMULATION"]]
     },
     "categories": {
       "SIMULATION": {}
@@ -13,7 +13,7 @@
   },
   "additions": {
     "layout": {
-      "right": [["ROTATION"], [], ["ZONE"]]
+      "right": [["ROTATION"], [], ["VOLUME", "ZONE"]]
     },
     "categories": {
       "INPUT": {
@@ -23,8 +23,9 @@
             "after_node": "GeometryNodeInputIndex"
           },
           {
-            "identifier": "GeometryNodeTool3DCursor",
-            "before_node": "GeometryNodeCollectionInfo",
+            "separator": true,
+            "label": "Tool",
+            "after_node": "bottom",
             "poll_conditions": [
               {
                 "context_path": "space_data.geometry_nodes_type",
@@ -34,8 +35,8 @@
             ]
           },
           {
-            "identifier": "GeometryNodeToolSelection",
-            "after_node": "GeometryNodeInputRadius",
+            "identifier": "GeometryNodeTool3DCursor",
+            // "before_node": "GeometryNodeCollectionInfo",
             "poll_conditions": [
               {
                 "context_path": "space_data.geometry_nodes_type",
@@ -46,7 +47,18 @@
           },
           {
             "identifier": "GeometryNodeToolFaceSet",
-            "before_node": "GeometryNodeInputID",
+            // "before_node": "GeometryNodeInputID",
+            "poll_conditions": [
+              {
+                "context_path": "space_data.geometry_nodes_type",
+                "operand": "equals",
+                "value": "TOOL"
+              }
+            ]
+          },
+          {
+            "identifier": "GeometryNodeToolSelection",
+            // "after_node": "GeometryNodeInputRadius",
             "poll_conditions": [
               {
                 "context_path": "space_data.geometry_nodes_type",
@@ -108,7 +120,16 @@
             "identifier": "GeometryNodeMeshToSDFVolume",
             "after_node": "GeometryNodeMeshToVolume"
           },
-          { "identifier": "GeometryNodeCornersOfEdge" }
+          {
+            "identifier": "GeometryNodeInputEdgeSmooth",
+            "before_node": "GeometryNodeInputMeshFaceIsPlanar",
+            "color": "input"
+          },
+          {
+            "identifier": "GeometryNodeCornersOfEdge",
+            "color": "input",
+            "before_node": "GeometryNodeCornersOfFace"
+          }
         ]
       },
       "POINT": {
