Added nodes for 4.3

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_0.jsonc
@@ -157,11 +157,13 @@
         "nodes": [
           {
             "label": "Simulation Zone",
+            "identifier": "SimulationZone",
             "operator": "node.add_simulation_zone",
             "settings": { "use_transform": true }
           },
           {
             "label": "Repeat Zone",
+            "identifier": "RepeatZone",
             "operator": "node.add_repeat_zone",
             "settings": { "use_transform": true }
           }
