--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
@@ -1,4 +1,5 @@
 // This is a versioning file that only specifies the new nodes in 4.3, compared to the previous version.
+// Lots of misc nodes added, plus a new zone.
 {
   "blender_version": [4, 3, 0],
   "removals": {
