Started adding operator to list un added nodes

--- a/node_pie/node_def_files/sockets/ShaderNodeTree_sockets_4_2.jsonc
+++ b/node_pie/node_def_files/sockets/ShaderNodeTree_sockets_4_2.jsonc
@@ -11,11 +11,11 @@
     "ShaderNodeBsdfPrincipled": {
       "inputs": [
         "NodeSocketFloatWavelength",
-        "NodeSocketFloat",
-        "NodeSocketColor",
         "NodeSocketFloatDistance",
+        "NodeSocketFloatFactor",
         "NodeSocketVector",
-        "NodeSocketFloatFactor"
+        "NodeSocketColor",
+        "NodeSocketFloat"
       ],
       "outputs": [
         "NodeSocketShader"
