Added missing geo nodes

--- a/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
+++ b/node_pie/node_def_files/builtin/GeometryNodeTree_4_3.jsonc
@@ -26,6 +26,10 @@
           {
             "identifier": "GeometryNodeWarning",
             "after_node": "FunctionNodeInputVector"
+          },
+          {
+            "identifier": "GeometryNodeToolActiveElement",
+            "after_node": "GeometryNodeTool3DCursor"
           }
         ]
       },
@@ -58,6 +62,14 @@
           {
             "identifier": "FunctionNodeMatrixDeterminant",
             "after_node": "FunctionNodeCombineTransform"
+          }
+        ]
+      },
+      "ROTATION": {
+        "nodes": [
+          {
+            "identifier": "FunctionNodeAxesToRotation",
+            "before_node": "FunctionNodeAxisAngleToRotation"
           }
         ]
       },
