--- a/node_pie/node_def_files/builtin/ShaderNodeTree_4_3.jsonc
+++ b/node_pie/node_def_files/builtin/ShaderNodeTree_4_3.jsonc
@@ -6,6 +6,24 @@
         "nodes": [
           { "identifier": "ShaderNodeTexGabor", "before_node": "ShaderNodeTexGradient" }
         ]
+      },
+      "SHADER": {
+        "nodes": [
+          { "identifier": "ShaderNodeBsdfSheen", "before_node": "ShaderNodeSubsurfaceScattering" },
+          { "identifier": "ShaderNodeBsdfMetallic", "before_node": "ShaderNodeMixShader" },
+          { "identifier": "ShaderNodeBsdfRayPortal", "after_node": "ShaderNodeBsdfHairPrincipled" },
+          {
+            "identifier": "ShaderNodeBackground",
+            "after_node": "ShaderNodeAddShader",
+            "poll_conditions": [
+              {
+                "context_path": "space_data.shader_type",
+                "operand": "equals",
+                "value": "WORLD"
+              }
+            ]
+          }
+        ]
       }
     }
   }
