Add missing compositor nodes

--- a/node_pie/node_def_files/builtin/CompositorNodeTree_4_1.jsonc
+++ b/node_pie/node_def_files/builtin/CompositorNodeTree_4_1.jsonc
@@ -4,6 +4,15 @@
     "nodes": ["CompositorNodeSplitViewer"]
   },
   "additions": {
-    "nodes": [{ "identifier": "CompositorNodeSplit" }]
+    "categories": {
+      "CONVERTOR": {
+        "nodes": [
+          {
+            "identifier": "CompositorNodeSplit",
+            "before_node": "CompositorNodeSwitch"
+          }
+        ]
+      }
+    }
   }
 }
