Removed more nodes from world context

--- a/node_pie/node_def_files/builtin/ShaderNodeTree_4_0.jsonc
+++ b/node_pie/node_def_files/builtin/ShaderNodeTree_4_0.jsonc
@@ -22,7 +22,8 @@
         "nodes": [
           {
             "identifier": "ShaderNodeBsdfAnisotropic",
-            "after_node": "ShaderNodeBsdfGlass"
+            "after_node": "ShaderNodeBsdfGlass",
+            "poll_type": "is_not_world"
           }
         ]
       }
